tests/test0149.exp
Parse error, unexpected . ( tests/test0149.ctr: 2 )
Expected ).
