tests/test0149.ctr
#NOAST
#Test Parser error
a := ( 3 + 2.
